# med-sys

./: .env.example  .gitignore  All_B_Medicines_With_Food_Interactions.xlsx  Dockerfile  README.md  ab.xlsx  alembic.ini  docker-compose.yml  firebase.json  pyproject.toml  register_test_phone.py  requirements.txt  setup_emulator_phone.py  symptoms.xlsx
alembic/versions/: 0001_initial.py  0002_medicine_sources.py  0003_otp_attempts.py  0004_firebase_phone_auth.py  0005_import_batch_status.py  0005_remove_lactating.py  0006_merge_heads.py
app/: main.py
app/api/: deps.py
app/core/: config.py  constants.py  firebase.py  logging.py  rate_limit.py  security.py
app/db/: seed.py  session.py
app/models/: __init__.py  audit.py  health_profile.py  interaction.py  medicine.py  symptom.py  user.py
app/schemas/: audit.py  auth.py  common.py  enrichment.py  (+5 more)
checkfordata/: All_A_Medicines_With_Food_Interactions.xlsx  All_C_Medicines_With_Food_Interactions.xlsx  ab.xlsx  drug-drug-interactions-formatted.xlsx
docs/: DEPLOYMENT.md  FIREBASE_AUTH.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
scripts/: e2e_test.py  seed.py  seed_data.py  seed_interactions.py  verify_api.py
tests/: conftest.py  test_admin_hardening.py  test_auth_firebase.py  test_auth_profile.py  test_enrichment.py  test_fixes.py  test_imports.py  test_interactions_symptoms.py  test_medicines.py  test_profile_safety.py  test_seed.py  test_symptom_admin.py
(+69 files in other folders)
