[project]
name = "smart-drug-safety-backend"
version = "0.1.0"
description = "FastAPI backend for medicine search, drug interaction checks, and safety guidance."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "firebase-admin>=6.5.0",
    "httpx>=0.27.2",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.5.2",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
